force-app/main/default/objects/Login_As_Event__c/Login_As_Event__c.object-meta.xml
<CustomObject>
    <label>LogIn As Event</label>
    <nameField>
        <displayFormat>LoginAs-{000000}</displayFormat>
        <label>Login As Event Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LogIn As Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>