force-app/main/default/objects/Login_As_Event__c/fields/Admin_User__c.field-meta.xml
<CustomField>
    <fullName>Admin_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Admin User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>LogIn_As_Events1</relationshipName>
    <type>Lookup</type>
</CustomField>