force-app/main/default/objects/Login_As_Event__c/fields/Event_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Event_Identifier__c</fullName>
    <label>Event Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>