force-app/main/default/objects/Login_As_Event__c/fields/Login_History_Id__c.field-meta.xml
<CustomField>
    <fullName>Login_History_Id__c</fullName>
    <label>Login History Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>