force-app/main/default/objects/Login_As_Event__c/fields/Login_Key__c.field-meta.xml
<CustomField>
    <fullName>Login_Key__c</fullName>
    <label>Login Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>